Refactor `EntitlementRules` to remove static rule initialization